<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fundo"
    android:visibility="visible"
    tools:context=".MainActivity"
    tools:visibility="visible">

    <ImageView
        android:id="@+id/imageCapa"
        android:layout_width="0dp"
        android:layout_height="320dp"
        android:layout_marginTop="50dp"
        android:scaleType="centerCrop"
        android:src="@drawable/test2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="65dp"
        android:layout_height="73dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageCapa" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="373dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="371dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="619dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="244dp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="273dp"
        android:layout_height="95dp"
        android:src="@drawable/nome"
        app:layout_constraintBottom_toBottomOf="@+id/imageCapa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageCapa"
        app:layout_constraintVertical_bias="0.395" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginEnd="5dp"
        android:src="@drawable/img4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView5"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toBottomOf="@+id/imageCapa"
        app:layout_constraintVertical_bias="0.215" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:src="@drawable/img5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView6"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/imageCapa"
        app:layout_constraintVertical_bias="0.218" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginStart="5dp"
        android:src="@drawable/img6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline9"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/imageCapa"
        app:layout_constraintVertical_bias="0.215" />

    <TextView
        android:id="@+id/tv_LogoTema"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/doramas_coreanos"
        android:textColor="@color/menu_navegacao"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline9"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toBottomOf="@+id/imageCapa"
        app:layout_constraintVertical_bias="0.012" />

    <TextView
        android:id="@+id/tv_LogoSeries"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="5dp"
        android:text="@string/s_ries"
        android:textColor="@color/menu_navegacao"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageCapa"
        app:layout_constraintEnd_toStartOf="@+id/tv_LogoFilmes"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageCapa"
        app:layout_constraintVertical_bias="0.131" />

    <TextView
        android:id="@+id/tv_LogoFilmes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:text="@string/filmes"
        android:textColor="@color/menu_navegacao"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageCapa"
        app:layout_constraintEnd_toStartOf="@+id/tv_LogoLista"
        app:layout_constraintStart_toEndOf="@+id/tv_LogoSeries"
        app:layout_constraintTop_toTopOf="@+id/imageCapa"
        app:layout_constraintVertical_bias="0.131" />

    <TextView
        android:id="@+id/tv_LogoLista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="25dp"
        android:text="@string/minha_lista"
        android:textColor="@color/menu_navegacao"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageCapa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_LogoFilmes"
        app:layout_constraintTop_toTopOf="@+id/imageCapa"
        app:layout_constraintVertical_bias="0.131" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_assistir"
        android:layout_width="125dp"
        android:layout_height="51dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:backgroundTint="@color/primaria"
        android:drawableLeft="@drawable/baseline_play_arrow_24"
        android:paddingHorizontal="20dp"
        android:paddingEnd="30dp"
        android:paddingBottom="10dp"
        android:text="@string/assistir"
        android:textColor="@color/branco"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageCapa"
        app:layout_constraintEnd_toStartOf="@+id/button_detalhes"
        app:layout_constraintStart_toEndOf="@+id/button_minhaLista"
        app:layout_constraintTop_toTopOf="@+id/imageCapa"
        app:layout_constraintVertical_bias="0.97"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvInspirador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/inspirador"
        android:textColor="@color/menu_navegacao"
        app:layout_constraintBottom_toBottomOf="@+id/imageCapa"
        app:layout_constraintEnd_toStartOf="@+id/tvDrama"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toTopOf="@+id/guideline11"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvDrama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/drama"
        android:textColor="@color/menu_navegacao"
        app:layout_constraintBottom_toBottomOf="@+id/imageCapa"
        app:layout_constraintEnd_toStartOf="@+id/tvComovente"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tvInspirador"
        app:layout_constraintTop_toTopOf="@+id/guideline11"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvComovente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="@string/comovente"
        android:textColor="@color/menu_navegacao"
        app:layout_constraintBottom_toBottomOf="@+id/imageCapa"
        app:layout_constraintEnd_toStartOf="@+id/guideline9"
        app:layout_constraintStart_toEndOf="@+id/tvDrama"
        app:layout_constraintTop_toTopOf="@+id/guideline11"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_minhaLista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@android:color/transparent"
        android:drawableTop="@drawable/baseline_add_24"
        android:padding="0dp"
        android:text="@string/minha_Lista"
        android:textColor="@color/menu_navegacao"
        app:iconSize="8sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageCapa"
        app:layout_constraintEnd_toStartOf="@+id/button_assistir"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toTopOf="@+id/imageCapa"
        app:layout_constraintVertical_bias="0.968"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_detalhes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@android:color/transparent"
        android:drawableTop="@drawable/baseline_info_24"
        android:padding="0dp"
        android:text="@string/detalhes"
        android:textColor="@color/menu_navegacao"
        app:iconSize="8sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageCapa"
        app:layout_constraintEnd_toStartOf="@+id/guideline9"
        app:layout_constraintStart_toEndOf="@+id/button_assistir"
        app:layout_constraintTop_toTopOf="@+id/imageCapa"
        app:layout_constraintVertical_bias="0.968"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_Nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="72dp"
        android:drawableLeft="@drawable/baseline_person_24"
        android:text="@string/j_lia_ramos"
        android:textColor="@color/menu_navegacao"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline9"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toBottomOf="@+id/imageCapa"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>